src/objects/Speaking_Engagement__c.object
<CustomObject>
    <description>Used to note a specific speaking engagement by a Contact (at a convention, summer school, etc.).</description>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Keynote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congress Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Convention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panelist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <inlineHelpText>Contact record of the speaker.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Speaking Engagements</relationshipLabel>
        <relationshipName>Speaking_Engagements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_of_Engagement__c</fullName>
        <inlineHelpText>Date/Time of the speaking engagement</inlineHelpText>
        <label>Date of Engagement</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Short description of engagement.  Additional notes can be added after creating the Speaking Engagement object.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <picklist>
            <picklistValues>
                <fullName>Fall State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development/Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing Summer School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgetown Summer School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA-Burd Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PNW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Princeton Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Princeton Summer School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stanford Summer School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Speaking Engagement</label>
    <nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>Speaking Engagement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speaking Engagements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>